pkgdata_DATA = Balls-Bouncy16.png Balls-Bouncy32.png Balls-Bouncy64.png \
               Balls-Death64.png Balls-EarthQ16.png Balls-EarthQ32.png Balls-EarthQ64.png \
               Balls-Fragile128.png Balls-Fragile16.png Balls-Fragile32.png Balls-Fragile64.png Balls-Fragile96.png \
               Balls-Red128.png Balls-Red16.png Balls-Red32.png Balls-Red64.png Balls-Red96.png \
               Balls-Seeker32.png Balls-Seeker64.png \
               Balls-SuperClock64.png Balls-SuperClock96.png Balls-SuperStar64.png Balls-SuperStar96.png \
               Balls-Upside128.png Balls-Upside16.png Balls-Upside32.png Balls-Upside64.png Balls-Upside96.png \
               Balls-Water16.png Balls-Water32.png Balls-Water64.png Balls-Water96.png \
               Balls-XMAS128.png \
               Hexa-16.png Hexa-32.png Hexa-64.png Quad.png \
               bonus.png border.png brandybun3.png font2.png glossyfont.png harpoon.png icon.ico icon.png \
               desert2.png gameover.png paused.png meltdown.png level.png level_empty.png \
               l1.jpg l2.jpg l3.jpg l4.jpg l5.jpg l6.jpg l7.jpg l8.jpg l9.jpg \
               guyChristmas.png guy_danigm.png guy_pix.png guy_pux.png guy_r2.png guy_sonic.png \
               gun.voc level.voc magic.voc meow.voc pop3.voc pop.voc quake.voc shoot.voc super.voc UPiPang.mp3 UPiPang.mid

EXTRA_DIST = $(pkgdata_DATA)
